# CoGrRs

./: .gitignore  Cargo.toml  readme.md
crates/CoGrRs/: Cargo.toml
crates/CoGrRs/examples/hello_sine/: main.rs  sine.comp
crates/CoGrRs/examples/hello_world/: main.rs
crates/CoGrRs/examples/ray_tracer/: bvh.rs  draw.comp  main.rs  trace.comp
crates/CoGrRs/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: auto_encoder.rs  buffer.rs  compute_pipeline.rs  encoder.rs  gpu_context.rs  lib.rs  resources.rs  shader.rs  texture.rs  to_screen_pipeline.rs  ui.rs  vertex.rs
crates/gpu/src/wgpu_impl/: auto_encoder.rs  buffer.rs  compute_pipeline.rs  encoder.rs  mod.rs  read_handle.rs  texture.rs  to_screen_pipeline.rs  ui.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  main_gui.rs
crates/ui/src/imgui/: mod.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs  main_loop.rs
crates/window/src/input/: button.rs  keyboard.rs  mod.rs  mouse.rs
examples/hello_sine/: main.rs  sine.comp  sine.glsl  sine.hlsl  sine.wgsl
examples/hello_world/: main.rs
examples/ray_tracer/: bvh.rs  draw.comp  draw.hlsl  main.rs  trace.comp  trace.glsl  trace.hlsl
examples/resource_clean/: main.rs
examples/voxel_tracer/: camera.rs  key_mapping.rs  main.rs  trace.rs
examples/voxel_tracer/shaders/: atmosphere.glsl  generate_rays.glsl  ray_direction.glsl  trace.glsl  trace2.glsl
shaders/: to_screen.frag  to_screen.vert
src/: lib.rs
src/gpu/: compute_pipeline.rs  encoder.rs  mod.rs  pipeline.rs  resources.rs  shader.rs  to_screen_pipeline.rs
src/window/: main_loop.rs  mod.rs
src/window/input/: button.rs  keyboard.rs  mod.rs  mouse.rs
