[package]
name = "cogrrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", default-features = false }
wgpu = { version = "0.17", default-features = false, features = ["spirv"] }
wgpu-profiler = "0.14"
pollster = { version = "0.3", default-features = false }
bytemuck = { version = "1.7", default-features = false, features = ["derive"] }
inline-spirv = { version = "0.1", default-features = false, features = [
    "hlsl",
] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
spirv-reflect = "0.2"
anyhow = "1.0"
shaderc = "0.8"

glam = { version = "0.24", features = ["bytemuck"] }
puffin = "0.17"
puffin_egui = "0.23"

egui = "0.23"
egui-wgpu = "0.23"
egui-winit = "0.23"

[profile.dev]
opt-level = 3

[dev-dependencies]
dolly = "0.4"