[package]
name = "cogrrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", default-features = false }
wgpu = { version = "0.17", default-features = false }
wgpu-profiler = "0.14"
naga = { version = "0.14", features = ["wgsl-in"] }
pollster = { version = "0.3", default-features = false }
bytemuck = { version = "1.7", default-features = false, features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
anyhow = "1.0"

glam = { version = "0.24", features = ["bytemuck"] }
puffin = "0.17"
puffin_egui = "0.23"

egui = "0.23"
egui-wgpu = "0.23"
egui-winit = "0.23"

[profile.dev]
opt-level = 3

[dev-dependencies]
dolly = "0.4"
