[package]
name = "cogrrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpu = {path = "../gpu"}
ui = {path = "../ui"}
window = {path = "../window"}
bytemuck = {version = "1.7", default-features = false, features = [ "derive" ]}
rayon = {version="1.6"}

[profile.release]
debug = true