[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-wgpu = {git="https://github.com/aholtzma-am/imgui-wgpu-rs/", rev="ce9c4d9"}
imgui = {version="0.9", features = ["tables-api"]}
imgui-winit-support = {version="0.9", default-features = false}
wgpu = {version = "0.14", default-features = false}
winit = {version = "0.27", default-features = false}
gpu = {path = "../gpu"}
strum = "0.24"
strum_macros = "0.24"